[gd_scene load_steps=4 format=3 uid="uid://b8hdumhcn5nub"]

[ext_resource type="Script" uid="uid://dtb16o186bkyx" path="res://Scripts/menu.gd" id="1_3kf3n"]
[ext_resource type="Texture2D" uid="uid://cavhnyc3ftiwh" path="res://Assets/Images/UiBackground.png" id="2_6pedr"]
[ext_resource type="Texture2D" uid="uid://ccfj1qmjmp523" path="res://Assets/Images/UiTitle.png" id="3_syfuq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kf3n")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00173611
anchor_top = -0.0108025
anchor_right = 1.00608
anchor_bottom = 1.17901
texture = ExtResource("2_6pedr")
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00260417
anchor_top = -0.0756173
anchor_right = 0.386284
anchor_bottom = 0.615741
offset_bottom = -3.05176e-05
texture = ExtResource("3_syfuq")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0842014
anchor_top = 0.646605
anchor_right = 0.195313
anchor_bottom = 0.802469
offset_top = 3.05176e-05
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
